# opennx

./: .gitignore  AboutDialog.cpp  AboutDialog.h  AboutDialog_symbols.h  AsyncProcess.cpp  AsyncProcess.h  CardWaiterDialog.cpp  CardWaiterDialog.h  CardWaiterDialog_symbols.h  ChangeLog  ConnectDialog.cpp  ConnectDialog.h  ConnectDialog_symbols.h  DebugStringGrabber.cpp  DebugStringGrabber.h  ExtHtmlWindow.cpp  ExtHtmlWindow.h  ForeignFrame.cpp  ForeignFrame.h  ForeignFrame_symbols.h  INSTALL  Icon.cpp  Icon.h  KeyDialog.cpp  KeyDialog.h  KeyDialog_symbols.h  LibOpenSC.cpp  LibOpenSC.h  LibUSB.cpp  LibUSB.h  LogDialog.cpp  LogDialog.h  LogDialog_symbols.h  LoginDialog.cpp  LoginDialog.h  LoginDialog_symbols.h  MacOSX.c  MacUninstallApp.cpp  MacUninstallApp.h  Makefile.am  (+125 more)
conf/: authors.xml
debian/: changelog  control  copyright  dirs  mkchangelog.pl  opennx.postinst  opennx.prerm  postinst  prerm  rules  triggers
docs/: Makefile.am  Makefile.in  pconnect.1  pconnect.html
etc/: 60-opennx.rules
extres/: nx-desktop.icns  nx.icns  opennx-admin.icns  opennx-uninstall.icns  opennx-wizard.icns  svg2icons
extres/xdg/: innovidata-opennx.directory  opennx-admin.desktop  opennx-wizard.desktop  opennx.desktop
m4/: compat.m4  flags.m4  flibcurl.m4
opensc/: opensc-config.in  pkcs15.h  scconf.h
packaging/MacOSX/: Description.plist  Makefile.am  Makefile.in  OpenSC.webloc  buildnx  buildopensc  buildsmbclient  fileopts  mkbundle  mkdmg  opennx-main.plist.in  opennx.plist.in  pkg.plist.in  volicon.icns
packaging/MacOSX/pkgResources/: InstallationCheck  License.html
packaging/MacOSX/pkgResources/English.lproj/: InstallationCheck.strings
packaging/MacOSX/pkgResources/German.lproj/: InstallationCheck.strings
packaging/MacOSX/pulse/: Makefile.am  Makefile.in  json-c.shasum  libsamplerate.shasum  libsndfile.shasum  pulseaudio.shasum  speex.shasum  urls.txt
packaging/MacOSX/pulse/cfg/: daemon.conf  default.pa
packaging/MacOSX/pulse/patches/: pulseaudio-osx-machid.patch  speex-crossppc.patch
packaging/win32/: Makefile.am  Makefile.in  findrequires.pl.in  lgpl.rtf  opennx.iss  version.iss
packaging/win32/cygnx/: Makefile.am  Makefile.in  README  getnxsetup
packaging/win32/nx/: Makefile.am  Makefile.in  libjpeg.md5sum  nxcomp.md5sum  nxesd.md5sum  urls.txt
packaging/win32/nx/patches/: libpng-exports.patch  nxcomp-win32.patch  nxesd-win32.patch  nxproxy-win32.patch
packaging/win32/pulse/: Makefile.am  Makefile.in  libsamplerate.md5sum  libsndfile.md5sum  pulseaudio.md5sum  urls.txt
packaging/win32/pulse/cfg/: client.conf  daemon.conf  default.pa
packaging/win32/pulse/patches/: jsonc-win32.patch  libsndfile-win32.patch
packaging/win32/xming/: Makefile.am  Makefile.in  Xming_69031_source.tar.bz2.md5sum  version.def
packaging/win32/xming/patches/: xming-build-cross.patch  xming-build-fontutils.patch  xming-build-native.patch  xming-build-nls.patch  xming-build-subsys.patch  xming-build-xauth.patch  xming-build-xset.patch  xming-build.patch  xming-clipfilter.patch  xming-envbasedir.patch  xming-kbhook.patch  xming-kioskhack.patch  xming-logdebug.patch  xming-mutex.patch  xming-optionhide.patch  xming-terminate.patch
patches/: README  jpeg-autoconf.patch  nxcomp-autotools.patch  nxcomp-gcc44.patch  nxcomp-irlimit.patch  nxcomp-noconst.patch  nxcomp-visibility.patch  nxcomp-zz_debugfix.patch  nxcomp-zz_kiosk-hack.patch  nxcomp-zz_png15.patch  nxcompsh-autotools.patch  nxesd-3.5-autotools.patch  nxesd-autotools.patch  nxproxy-autotools.patch  nxservice-autotools.patch  nxssh-dynopensc.patch  nxssh-newbuild.patch  openssh-scard-pin.patch
po/: LINGUAS  Makevars  POTFILES.in  de.gmo  de.po  ja.gmo  ja.po  opennx.pot  ru.gmo  ru.po
res/: about.html  de_about.html  lgpl.xml  opennx.rc.in  opennx.xrc  tracelog.xrc
share/: keyboards
